--- a/telegram/css/style.css
+++ b/telegram/css/style.css
@@ -1,24 +1,48 @@
+/*Font*/
+@font-face {
+    font-family: Droid Sans;
+    src: url(../fonts/droid-sans.ttf);
+}
+html * {
+    font-family: Droid Sans;
+}
+/*Flexbox tweaks*/
+html {
+    height: 100%;
+}
+body {
+    min-height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+#wrap {
+    flex: 1 0 auto;
+}
+/*Navbar margin*/
+nav {
+    margin-bottom: 2em;
+}
+/*Links*/
+a {color: #e7e7e7;}
+a:hover{
+    text-decoration: none;
+    color: #fefefe;
+    text-shadow: 0px 0px 5px rgba(256, 256, 256, 0.8);
+}
+/*Disable list decorations*/
+li {
+    list-style-type: none;
+}
+/*Nickname and date colors*/
 .date {
     color: green;
+    text-align: right;
 }
 .nickname {
     color: darkblue;
     text-align: right;
 }
-
-.inputs {display: none;}
-
-.card-footer {
-    display: flex;
-    justify-content: space-around;
-    flex-direction: row-reverse;
-    align-items: center;
-}
-
-.text-col {
-    -webkit-transition: all 300ms;
-}
-
+/*Transitions*/
 .nickname, .text-col, .date {
     -webkit-transition: color 175ms;
     -moz-transition: color 175ms;
@@ -26,20 +50,12 @@
     -o-transition: color 175ms;
     transition: color 175ms;
 }
-
-.process-buttons {
-
-}
-.date {
+/*Flexible table size*/
+.date, .nickname{
     white-space: nowrap;
+    width:1%;
 }
-.nick-date-col {width: auto;}
-.small-col {width: 12%!important;}
-
-.inputs {
-
-}
-
+/*Alert magic*/
 .alert {
     position: fixed;
     left: 50%;
@@ -48,5 +64,29 @@
     width: 50%;
     text-align: center;
 }
-
-#editProcess, #newProcess {display: none;}
+/*Hiding settings*/
+.inputs, #dateColor, #editProcess, #newProcess {
+    display: none;
+}
+/*Pretty buttons border*/
+.inputs .btn, .btn {
+    border: 1px solid rgba(0,0,0,0.5);
+}
+/*Flexbox for footer's buttons*/
+.card-footer {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row-reverse;
+    align-items: flex-start;
+    flex-wrap: wrap-reverse;
+}
+/*Footer make-up*/
+.footer {
+    margin-top: 1.5em;
+    padding-bottom: 1em;
+    padding-top: 1em;
+}
+/*Word breaks*/
+.text-col {
+    word-break: break-all;
+}
