--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -377,9 +377,17 @@ body {
     webkit-tap-highlight-color: rgba(255,255,255,.2);
 }
 
-.sig-box {
-    width: 500px; 
-    height: 147px;
-    
+.center-block {
+    display: flex!important;
+    justify-content: center!important;
 }
 
+.img-responsive {
+    margin-bottom: 15px!important;
+}
+.img-goha {
+    min-width: 147px;
+}
+.telegream-screenshot {
+    max-height: 200px!important;
+}
